# trading-signals

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SETUP-DROPLET.md  SPEC.md  alert_engine.py  auth_store.py  cli_parser.py  crash_boundary.py  daily_loop.py  daily_run.py  daily_run_helpers.py  dashboard-account.html  dashboard-market-test.html  dashboard-settings.html  dashboard-signals.html  dashboard.py  data_fetcher.py  deploy.sh  interactive.py  main.py  news_fetcher.py  news_filter.py  notifier.py  paper_trade_alerts.py  per_user_fanout.py  pnl_engine.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  scheduler_driver.py  signal_engine.py  sizing_engine.py  state_actions.py  state_manager.py  system_params.py
.claude/: .gitignore  LEARNINGS.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
auth_store/: __init__.py  _devices.py  _io.py  _magic_links.py  _schema.py  _users.py
backtest/: __init__.py  __main__.py  cli.py  data_fetcher.py  metrics.py  render.py  simulator.py
dashboard_legacy/: __init__.py  account_section.py  calc_rows.py  page_body.py  paper_trades_section.py  positions_section.py  render_helpers.py  section_renderers.py  trace_panels.py
dashboard_renderer/: __init__.py  api.py  assets.py  context.py  formatters.py  io.py  pages.py  shell.py  stats.py
docs/: DEPLOY.md  STRATEGY-CHANGELOG.md
nginx/: signals.conf
notifier/: __init__.py  crash_path.py  dispatch.py  formatters.py  (+5 more)
(+990 files in other folders)
