[project]
name = 'trading-signals'
version = '0.1.0'
description = 'SPI 200 & AUD/USD mechanical daily signal system'
requires-python = '>=3.11,<3.12'

[tool.pytest.ini_options]
minversion = '8.0'
testpaths = ['tests']
python_files = ['test_*.py']
python_classes = ['Test*']
python_functions = ['test_*']
addopts = '-ra --strict-markers'

[tool.ruff]
line-length = 100
target-version = 'py311'
extend-exclude = ['.venv', 'tests/fixtures', 'tests/oracle/goldens']

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I', 'B', 'UP']
ignore = []

[tool.ruff.format]
indent-style = 'space'
quote-style = 'single'
line-ending = 'lf'

[tool.ruff.lint.isort]
known-first-party = ['signal_engine']
